--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <button class="button">View Details</button>
                 </div>
                 <div class="car-item">
-                    <img src="img/image5.jpg" alt="Car Model 2">
+                    <img src="image5.jpg" alt="Car Model 2">
                     <h4>2021 Tesla Model S</h4>
                     <p>Price: M495,000</p>
                     <button class="button">View Details</button>
