--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>Featured Cars</h3>
             <div class="car-gallery">
                 <div class="car-item">
-                    <img src="img/02.jpg" alt="Car Model 1">
+                    <img src="02.jpg" alt="Car Model 1">
                     <h4>2022 JEEP</h4>
                     <p>Price: M236,000</p>
                     <button class="button">View Details</button>
@@ -63,7 +63,7 @@
                     <button class="button">View Details</button>
                 </div>
                 <div class="car-item">
-                    <img src="img/2022_Audi_.avif" alt="Car Model 6">
+                    <img src="2022_Audi_.avif" alt="Car Model 6">
                     <h4>2022 Mercedes-Benz C-Class</h4>
                     <p>Price: M550,000</p>
                     <button class="button">View Details</button>
